--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do List Practice Web-App</title>
-    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="deleteConfirm"><%- delMsg %></div>
+    <div id="deleteConfirm" style="background-color: green"><%- delMsg %></div>
     <h1>To-Do List Webapp</h1>
     <b>Current items to-do:</b>
     <% if (todo) { %> <%- todolist %> <% } else { %>
